[package]
name = "yaml_pathfinder"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
yaml-rust = "0.4"

[dependencies.chrono]
version = "0.4"
optional = true


[features]
default = []
date_parsing = ["chrono"]
